reto4/kubertenes/drupal/DrupalManifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal
  labels:
    app: drupal
spec:
  ports:
    - port: 80
  selector:
    app: drupal
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal
spec:
  replicas: 3
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
    spec:
      containers:
      - name: drupal
        image: drupal
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/var/www/html/modules"
          name: drupal-data
        - mountPath: "/var/www/html/themes"
          name: drupal-data
        - mountPath: "/var/www/html/profiles"
          name: drupal-data
        - mountPath: "/var/www/html/sites"
          name: drupal-data
      volumes:
      - name: drupal-data
        persistentVolumeClaim:
          claimName: drupal-glusterfs-pvc
