reto4/kubertenes/drupal/ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal-ssl-ingress
spec:
  ingressClassName: public
  rules:
  - host: banilat.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drupal-service
            port:
              number: 80
  tls:
  - hosts:
    - banilat.store 
    - www.banilat.store 
    secretName: drupal-tls
